# playing-with-haskell

./: .gitignore  playing-with-haskell.cabal
src/: Main.hs  Module1.hs
